--- a/objeto 3/perfilFuncionario.html
+++ b/objeto 3/perfilFuncionario.html
@@ -8,7 +8,7 @@
     <title>Perfil</title>
 </head>
 <body onload="CarregaUser()">
-            <main class="perfil">
+            <div class="perfilFuncionario">
                 <div class="perfilConteiner">
                     <form class="perfilForm">
                         <div>
@@ -23,7 +23,7 @@
                         </div> 
                     </form>
                 </div>
-            </main>        
+            </div>        
      
     <script src="file.js"></script>  
     
