--- a/objeto 3/arquivo morto/cadastro.html
+++ b/objeto 3/arquivo morto/cadastro.html
@@ -10,7 +10,7 @@
 </head>
 <body >
     
-    <div class="cadastro">
+    <main class="cadastro">
         <div class="cadastroContainer">
             <form class="cadastroForm">
                         <h1 class="cadastroTitle">Cadastro</h1>
@@ -22,7 +22,7 @@
                         <a class="link" href="login.html"><label>Ja possuo conta!</label></a>
             </form>
         </div>
-    </div>    
+    </main>    
 
 
 
