--- a/objeto 3/login + cadastro/login.html
+++ b/objeto 3/login + cadastro/login.html
@@ -73,7 +73,7 @@
 
         <script src="../file.js"></script>  
 
-        <script src="file.js"></script>  
+        <script src="../file.js"></script>  
         <script type="text/javascript" src="js/materialize.min.js"></script>
     
 
